# KaleidoSound

./: CMakeLists.txt  resources.qrc
asset/: AssetBrowser.cpp  AssetBrowser.h  AssetManager.cpp  AssetManager.h  AudioAsset.h  STLAsset.h  SelectionModel.cpp  SelectionModel.h
audio/: AnalysisManager.cpp  AnalysisManager.h  AubioBeatDetector.cpp  AubioBeatDetector.h  AudioAnalyzer.cpp  AudioAnalyzer.h  AudioLoadWorker.cpp  AudioLoadWorker.h  BeatAnalysisResult.h  BeatDetector.cpp  BeatDetector.h  BeatNetDetector.cpp  BeatNetDetector.h  BeatReference.cpp  BeatReference.h  IBeatDetector.h  TransportController.cpp  TransportController.h
core/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  RenderWidget.cpp  main.cpp
styles/: app.qss
timeline/: BeatTrack.cpp  BeatTrack.h  TimelineTrack.h  TimelineViewState.cpp  TimelineViewState.h  TimelineWidget.cpp  TimelineWidget.h  WaveformTrack.cpp  WaveformTrack.h  WaveformWidget.cpp  WaveformWidget.h
ui/: InspectorWidget.cpp  InspectorWidget.h  PanelManager.cpp  PanelManager.h
viewer/: Mesh.cpp  Mesh.h  RenderWidget.cpp  RenderWidget.h  StlLoader.cpp  StlLoader.h
